--- a/index.html
+++ b/index.html
@@ -133,8 +133,7 @@
                     <div class="leftSide mb-45">
                         <span>popular services</span>
                         <h4>Our Services</h4>
-                        <p>IT solutions, or Information Technology solutions, refer to technologies, strategies services
-                        </p>
+                        <p>We are dedicated to providing top-notch IT services to meet your business needs. Our team of experts specializes in a wide range of services, ensuring comprehensive solutions for your digital success.</p>
                     </div>
                     <img src="assest/images/2.png" class="d-none d-xl-block leftImg" alt="" />
                 </div>
@@ -148,7 +147,7 @@
                                 <div class="title">
                                     <h5>Web App Development</h5>
                                 </div>
-                                <p>IT service providers may offer custom software development Planning</p>
+                                <p>Responsive and dynamic web development services to create a strong online presence for your business.</p>
                                 <div class="button">
                                     <a href="javscript:void(0)">
                                         <img src="assest/images/svg/right-arrow.svg" alt="" />
@@ -164,7 +163,7 @@
                                 <div class="title">
                                     <h5>Mobile App Development</h5>
                                 </div>
-                                <p>IT service providers may offer custom software development Planning</p>
+                                <p>Harness the power of mobile technology with custom app development for iOS and Android platforms.</p>
                                 <div class="button">
                                     <a href="javscript:void(0)">
                                         <img src="assest/images/svg/right-arrow.svg" alt="" />
@@ -180,7 +179,7 @@
                                 <div class="title">
                                     <h5>UI/UX Brand Solutions</h5>
                                 </div>
-                                <p>IT service providers may offer custom software development Planning</p>
+                                <p>Our design experts specialize in creating intuitive interfaces, establishing a strong brand identity, and delivering a seamless user experience.</p>
                                 <div class="button">
                                     <a href="javscript:void(0)">
                                         <img src="assest/images/svg/right-arrow.svg" alt="" />
@@ -196,7 +195,7 @@
                                 <div class="title">
                                     <h5>Search Engine Optimization</h5>
                                 </div>
-                                <p>IT service providers may offer custom software development Planning</p>
+                                <p>Amplify your online presence with our SEO expertise, driving enhanced rankings and attracting your target audience through increased organic traffic.</p>
                                 <div class="button">
                                     <a href="javscript:void(0)">
                                         <img src="assest/images/svg/right-arrow.svg" alt="" />
