--- a/index.html
+++ b/index.html
@@ -133,7 +133,9 @@
                     <div class="leftSide mb-45">
                         <span>popular services</span>
                         <h4>Our Services</h4>
-                        <p>We are dedicated to providing top-notch IT services to meet your business needs. Our team of experts specializes in a wide range of services, ensuring comprehensive solutions for your digital success.</p>
+                        <p>We are dedicated to providing top-notch IT services to meet your business needs. Our team of
+                            experts specializes in a wide range of services, ensuring comprehensive solutions for your
+                            digital success.</p>
                     </div>
                     <img src="assest/images/2.png" class="d-none d-xl-block leftImg" alt="" />
                 </div>
@@ -147,7 +149,8 @@
                                 <div class="title">
                                     <h5>Web App Development</h5>
                                 </div>
-                                <p>Responsive and dynamic web development services to create a strong online presence for your business.</p>
+                                <p>Responsive and dynamic web development services to create a strong online presence
+                                    for your business.</p>
                                 <div class="button">
                                     <a href="javscript:void(0)">
                                         <img src="assest/images/svg/right-arrow.svg" alt="" />
@@ -163,7 +166,8 @@
                                 <div class="title">
                                     <h5>Mobile App Development</h5>
                                 </div>
-                                <p>Harness the power of mobile technology with custom app development for iOS and Android platforms.</p>
+                                <p>Harness the power of mobile technology with custom app development for iOS and
+                                    Android platforms.</p>
                                 <div class="button">
                                     <a href="javscript:void(0)">
                                         <img src="assest/images/svg/right-arrow.svg" alt="" />
@@ -179,7 +183,8 @@
                                 <div class="title">
                                     <h5>UI/UX Brand Solutions</h5>
                                 </div>
-                                <p>Our design experts specialize in creating intuitive interfaces, establishing a strong brand identity, and delivering a seamless user experience.</p>
+                                <p>Our design experts specialize in creating intuitive interfaces, establishing a strong
+                                    brand identity, and delivering a seamless user experience.</p>
                                 <div class="button">
                                     <a href="javscript:void(0)">
                                         <img src="assest/images/svg/right-arrow.svg" alt="" />
@@ -195,7 +200,8 @@
                                 <div class="title">
                                     <h5>Search Engine Optimization</h5>
                                 </div>
-                                <p>Amplify your online presence with our SEO expertise, driving enhanced rankings and attracting your target audience through increased organic traffic.</p>
+                                <p>Amplify your online presence with our SEO expertise, driving enhanced rankings and
+                                    attracting your target audience through increased organic traffic.</p>
                                 <div class="button">
                                     <a href="javscript:void(0)">
                                         <img src="assest/images/svg/right-arrow.svg" alt="" />
@@ -225,13 +231,17 @@
                                 <span class="number">01</span>
                                 <div class="info">
                                     <h5>Analysis & Planning</h5>
-                                    <p>Begin by thoroughly analyzing client requirements, industry trends, and project goals. Develop a comprehensive plan that outlines the project scope, technology stack, and milestones. This step lays the foundation for a successful project by aligning expectations and goals.</p>
+                                    <p>Begin by thoroughly analyzing client requirements, industry trends, and project
+                                        goals. Develop a comprehensive plan that outlines the project scope, technology
+                                        stack, and milestones. This step lays the foundation for a successful project by
+                                        aligning expectations and goals.</p>
                                     <div class="button">
                                         <a href="javscript:void(0)">
                                             <img src="assest/images/svg/right-arrow.svg" alt="" />
                                         </a>
                                     </div>
-                                    <img decoding="async" src="assest/images/svg/arrow-3.svg" alt="arrow-img" class="before-img">
+                                    <img decoding="async" src="assest/images/svg/arrow-3.svg" alt="arrow-img"
+                                        class="before-img">
                                 </div>
                             </div>
                         </div>
@@ -240,13 +250,17 @@
                                 <span class="number">02</span>
                                 <div class="info">
                                     <h5>Agile Development & Testing</h5>
-                                    <p>Implement an agile development methodology to facilitate iterative development and quick adaptation to changes. Divide the project into sprints, allowing for continuous feedback and improvements. Rigorous testing during and after development ensures a high-quality, bug-free end product.</p>
+                                    <p>Implement an agile development methodology to facilitate iterative development
+                                        and quick adaptation to changes. Divide the project into sprints, allowing for
+                                        continuous feedback and improvements. Rigorous testing during and after
+                                        development ensures a high-quality, bug-free end product.</p>
                                     <div class="button">
                                         <a href="javscript:void(0)">
                                             <img src="assest/images/svg/right-arrow.svg" alt="" />
                                         </a>
                                     </div>
-                                    <img decoding="async" src="assest/images/svg/arrow-3.svg" alt="arrow-img" class="before-img">
+                                    <img decoding="async" src="assest/images/svg/arrow-3.svg" alt="arrow-img"
+                                        class="before-img">
                                 </div>
                             </div>
                         </div>
@@ -255,7 +269,10 @@
                                 <span class="number">03</span>
                                 <div class="info">
                                     <h5>Client Collaboration & Support</h5>
-                                    <p>Maintain transparent and open communication with clients throughout the project lifecycle. Regular updates, demos, and collaboration sessions ensure alignment with client expectations. Post-launch, provide ongoing support, addressing any issues promptly, and ensuring client satisfaction.</p>
+                                    <p>Maintain transparent and open communication with clients throughout the project
+                                        lifecycle. Regular updates, demos, and collaboration sessions ensure alignment
+                                        with client expectations. Post-launch, provide ongoing support, addressing any
+                                        issues promptly, and ensuring client satisfaction.</p>
                                     <div class="button">
                                         <a href="javscript:void(0)">
                                             <img src="assest/images/svg/right-arrow.svg" alt="" />
@@ -265,6 +282,55 @@
                             </div>
                         </div>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="techSection">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="heading">
+                        <span>EMPOWERING THROUGH TECH</span>
+                        <h3>At the Core of Innovation - Crafting Digital Excellence.<br />Our Committed Team, a Fusion
+                            of Creativity and Technical Prowess, Strives to</h3>
+                        <a class="btn">Get it now</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="testiSection">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 col-lg-6">
+                    <div class="testimonial">
+                        <div class="heading">
+                            <span>OUR TESTIMONIALS</span>
+                            <h5>What Our Client Say</h5>
+                        </div>
+                        <div class="box">
+                            <div class="content">
+                                <div class="star">
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                    <i class="fas fa-star"></i>
+                                </div>
+                                <p>IT plays a vital role in healthcare systems, including electronic health records EHRs medical imaging, telemedicine, health information systems, and medical research The field of information technology is vast and continually evolving. It has a significant impact on various aspects of modern society, including business, communication, education, healthcare, and entertainment contributes to research and development.</p>
+                                <div class="info">
+                                    <h6>Alex John</h6>
+                                    <span>SENIOR DESIGNER</span>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-12 col-lg-5 ml-auto d-none d-lg-block">
+                    <img src="https://picsum.photos/1000/700" class="testimonialImg" alt="" />
                 </div>
             </div>
         </div>
