--- a/index.html
+++ b/index.html
@@ -41,42 +41,42 @@
                             <img id="mainLogo" src="assest/images/white_logo.png" alt="" />
                         </a>
                         <button class="navbar-toggler" type="button" data-toggle="collapse"
-                            data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                            data-target="#headerNavbar" aria-controls="headerNavbar"
                             aria-expanded="false" aria-label="Toggle navigation">
-                            <span class="navbar-toggler-icon"></span>
+                            <i class="fas fa-bars"></i>
                         </button>
 
-                        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <div class="collapse navbar-collapse" id="headerNavbar">
                             <ul class="navbar-nav ml-auto mr-10">
                                 <li class="nav-item dropdown ml-10 mr-10 md-ml-0">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
+                                    <a class="nav-link dropdown-toggle" href="javascript:void(0)" role="button" data-toggle="dropdown"
                                         aria-expanded="false">
                                         Expertise
                                     </a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="#">Consulting</a>
-                                        <a class="dropdown-item" href="#">Custom Software Development</a>
-                                        <a class="dropdown-item" href="#">Web Development</a>
-                                        <a class="dropdown-item" href="#">Web Design</a>
-                                        <a class="dropdown-item" href="#">Mobile App Development</a>
+                                        <a class="dropdown-item" href="javascript:void(0)">Consulting</a>
+                                        <a class="dropdown-item" href="javascript:void(0)">Custom Software Development</a>
+                                        <a class="dropdown-item" href="javascript:void(0)">Web Development</a>
+                                        <a class="dropdown-item" href="javascript:void(0)">Web Design</a>
+                                        <a class="dropdown-item" href="javascript:void(0)">Mobile App Development</a>
                                     </div>
                                 </li>
                                 <li class="nav-item ml-10 mr-10 md-ml-0">
-                                    <a class="nav-link" href="#">Our Process</a>
+                                    <a class="nav-link" href="javascript:void(0)">Our Process</a>
                                 </li>
                                 <li class="nav-item ml-10 mr-10 md-ml-0">
-                                    <a class="nav-link" href="#">Case Studies</a>
+                                    <a class="nav-link" href="javascript:void(0)">Case Studies</a>
                                 </li>
                                 <li class="nav-item dropdown ml-10 mr-10 md-ml-0">
-                                    <a class="nav-link dropdown-toggle" href="#" role="button" data-toggle="dropdown"
+                                    <a class="nav-link dropdown-toggle" href="javascript:void(0)" role="button" data-toggle="dropdown"
                                         aria-expanded="false">
                                         Company
                                     </a>
                                     <div class="dropdown-menu">
-                                        <a class="dropdown-item" href="#">About Us</a>
-                                        <a class="dropdown-item" href="#">Careers</a>
-                                        <a class="dropdown-item" href="#">Blog</a>
-                                        <a class="dropdown-item" href="#">Contact Us</a>
+                                        <a class="dropdown-item" href="javascript:void(0)">About Us</a>
+                                        <a class="dropdown-item" href="javascript:void(0)">Careers</a>
+                                        <a class="dropdown-item" href="javascript:void(0)">Blog</a>
+                                        <a class="dropdown-item" href="javascript:void(0)">Contact Us</a>
                                     </div>
                                 </li>
                             </ul>
@@ -320,25 +320,175 @@
                                     <i class="fas fa-star"></i>
                                     <i class="fas fa-star"></i>
                                 </div>
-                                <p>IT plays a vital role in healthcare systems, including electronic health records EHRs medical imaging, telemedicine, health information systems, and medical research The field of information technology is vast and continually evolving. It has a significant impact on various aspects of modern society, including business, communication, education, healthcare, and entertainment contributes to research and development.</p>
+                                <p>Choosing Naklank Infotech was a game-changer for our business. Their team's
+                                    expertise, dedication, and innovative solutions propelled us to new heights. From
+                                    seamless development to unparalleled support, Naklank Infotech exceeded our
+                                    expectations. Trustworthy, reliable, and truly a partner in success.</p>
                                 <div class="info">
                                     <h6>Alex John</h6>
-                                    <span>SENIOR DESIGNER</span>
+                                    <span>CEO</span>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-12 col-lg-5 ml-auto d-none d-lg-block">
-                    <img src="https://picsum.photos/1000/700" class="testimonialImg" alt="" />
+                    <img src="assest/images/homa-banner_1.jpg" class="testimonialImg" alt="" />
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="blogSection">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12">
+                    <div class="heading mb-30">
+                        <span>LATEST NEWS & BLOG</span>
+                        <h2>Get Every Single Updates</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-4 col-md-6 col-12">
+                    <div class="card">
+                        <img src="assest/images/homa-banner_1.jpg" class="blog_img" alt="" />
+                        <div class="content">
+                            <h6>Make Honest Design Work As For Digital Business.</h6>
+                            <div class="link-share">
+                                <div class="button">
+                                    <a href="javscript:void(0)">
+                                        <img src="assest/images/svg/right-arrow.svg" alt="" />
+                                    </a>
+                                </div>
+                                <a href="javascript:void(0)" class="share"><i class="fal fa-share-alt"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 col-12">
+                    <div class="card">
+                        <img src="assest/images/homa-banner_1.jpg" class="blog_img" alt="" />
+                        <div class="content">
+                            <h6>Make Honest Design Work As For Digital Business.</h6>
+                            <div class="link-share">
+                                <div class="button">
+                                    <a href="javscript:void(0)">
+                                        <img src="assest/images/svg/right-arrow.svg" alt="" />
+                                    </a>
+                                </div>
+                                <a href="javascript:void(0)" class="share"><i class="fal fa-share-alt"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-xl-4 col-md-6 col-12">
+                    <div class="card">
+                        <img src="assest/images/homa-banner_1.jpg" class="blog_img" alt="" />
+                        <div class="content">
+                            <h6>Make Honest Design Work As For Digital Business.</h6>
+                            <div class="link-share">
+                                <div class="button">
+                                    <a href="javscript:void(0)">
+                                        <img src="assest/images/svg/right-arrow.svg" alt="" />
+                                    </a>
+                                </div>
+                                <a href="javascript:void(0)" class="share"><i class="fal fa-share-alt"></i></a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="quoteSection">
+        <div class="container">
+            <div class="row align-items-center">
+                <div class="col-xl-8 text-white col-12 text-center mb-20 mb-xl-0">
+                    <h2>Unlock your IT potential with free consultations. Elevate your solutions, hassle-free.</h2>
+                </div>
+                <div class="col-xl-4 col-12 text-center">
+                    <a href="javascript:void" class="btn m-auto" id="submitContactForm">Get a quote</a>
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Footer -->
-    <footer class="bg-dark text-white text-center py-3">
-        <p>&copy; 2023 Your IT Company. All rights reserved.</p>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-md-12 col-sm-12 mb-30">
+                    <div class="footer-logo mb-30">
+                        <img src="assest/images/white_logo.png" class="img-fluid" alt="" />
+                    </div>
+                    <ul class="widget-list">
+                        <li>58 Howard Street #2 San Francisco, CA 941</li>
+                        <li><a href="mailto:contact@aeroland.com" class="hover-style-link">contact@aeroland.com</a></li>
+                        <li><a href="tel:123344556" class="hover-style-link text-black font-weight--bold">(+68)1221
+                                09876</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-3 col-md-5 col-sm-5 mb-30">
+                    <h6 class="mb-20">IT Services</h6>
+                    <ul class="widget-list">
+                        <li><a href="javascript:void(0)">Web App Development</a></li>
+                        <li><a href="javascript:void(0)">Mobile App Development</a></li>
+                        <li><a href="javascript:void(0)">UI/UX Brand Solutions</a></li>
+                        <li><a href="javascript:void(0)">Search Engine Optimization</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 col-md-3 col-sm-3 mb-30">
+                    <h6 class="mb-20">Company</h6>
+                    <ul class="widget-list">
+                        <li><a href="javascript:void(0)">About</a></li>
+                        <li><a href="javascript:void(0)">Careers</a></li>
+                        <li><a href="javascript:void(0)">Blog</a></li>
+                    </ul>
+                </div>
+                <div class="col-lg-2 col-md-4 col-sm-4 mb-30">
+                    <h6 class="mb-20">Support</h6>
+                    <ul class="widget-list">
+                        <li><a href="javascript:void(0)">Contact Us</a></li>
+                        <li><a href="javascript:void(0)">Help & FAQ</a></li>
+                        <li><a href="javascript:void(0)">Privacy Policy</a></li>
+                        <li><a href="javascript:void(0)">Terms & Condition</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-copyright">
+                <div class="row align-items-center">
+                    <div class="col-md-6 text-center text-md-left">
+                        <span>© 2023 Mitech. <a href="https://hasthemes.com/">All Rights Reserved.</a></span>
+                    </div>
+                    <div class="col-md-6 text-center text-md-right">
+                        <ul class="social-icon">
+                            <li>
+                                <a href="https://twitter.com" target="_blank" aria-label="Twitter">
+                                    <i class="fab fa-twitter link-icon"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://facebook.com" target="_blank" aria-label="Facebook">
+                                    <i class="fab fa-facebook-f link-icon"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://instagram.com" target="_blank" aria-label="Instagram">
+                                    <i class="fab fa-instagram link-icon"></i>
+                                </a>
+                            </li>
+                            <li>
+                                <a href="https://linkedin.com" target="_blank" aria-label="Linkedin">
+                                    <i class="fab fa-linkedin link-icon"></i>
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
 
     <!-- Bootstrap Scripts (Make sure to include jQuery and Popper.js) -->
